{
    "name": "GameInput",
    "maps": [
        {
            "name": "Player_1",
            "id": "62fd8281-64c0-44c1-8298-c4fcd3225b38",
            "actions": [
                {
                    "name": "XMove",
                    "type": "Button",
                    "id": "74a78806-7efe-4c66-a89f-ad8359603721",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YMove",
                    "type": "Button",
                    "id": "8013428e-93d4-45f3-ae6c-b087d049d9e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Strike",
                    "type": "Button",
                    "id": "8d1460f4-47e0-449c-9262-d83751655c54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Miss",
                    "type": "Button",
                    "id": "3dcd9a89-452a-4ffc-8107-4868e761b720",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "A D",
                    "id": "5ac301fe-57b2-42b8-8c7a-f8e8e4b6cf58",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "aa31c7ad-0209-4285-8ee4-4e05e1cac6fa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0cf1d804-4451-475c-bba7-70fe47d94f0d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "W S",
                    "id": "2bba2e69-7fed-45e8-909e-cf9d785ee97d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "b9461380-fce7-4a84-a9c7-7a0a18518b17",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "a1b6564c-c102-4da3-9ecf-f1fdf1133a85",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "58ff1fdd-6c5c-45ac-8123-f3ef8520301c",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strike",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80b6e225-55f4-492d-9a51-89fb8faee55e",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Miss",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player_2",
            "id": "dd3beac3-d6e9-46b3-832b-fdb680aaaac5",
            "actions": [
                {
                    "name": "XMove",
                    "type": "Button",
                    "id": "42db2f5c-43fe-4cc3-b44b-7e7ef5f2da47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YMove",
                    "type": "Button",
                    "id": "0dff3f41-1067-48a6-b687-d31b07ff120a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Strike",
                    "type": "Button",
                    "id": "3042480a-48e1-4d90-832b-dd13af9a4407",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Miss",
                    "type": "Button",
                    "id": "9934e823-ef3d-41c3-96cb-37fb08272e46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f9d262ee-0f46-438e-bef2-09731bcd6af1",
                    "path": "<Keyboard>/comma",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Strike",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55079dc5-8bd1-4ef3-a02f-dc680fb58be6",
                    "path": "<Keyboard>/period",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Miss",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left Right",
                    "id": "feb33948-81ff-4d1d-97ca-75bdeaa301b5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "367674f4-7307-441c-9478-1dae5b21e8d7",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "XMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b797e88d-e5d5-4b4f-a685-65d09cf38f86",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "XMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Up Down",
                    "id": "f4baeb1e-4200-4ffe-8355-34d1a12f6b49",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "68909813-920e-453e-aa3b-a8b9eda7762d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "YMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2a283a6e-df99-4044-a90f-50c2bedeac6c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "YMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoard",
            "bindingGroup": "KeyBoard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}